# MAXMIDI

./: LICENSE.md  README.md
.github/workflows/: p.yml
MAXMIDI/maxmidi/: CMakeLists.txt  LICENSE.txt  README.md  main.cpp
MAXMIDI/maxmidi/agent/: com.maxmidi.agent.plist
MAXMIDI/maxmidi/examples/: midi_demo.cpp
MAXMIDI/maxmidi/include/maxmidi/: Callback.hpp  EventTypes.hpp  MaxMidi.hpp  SMF.hpp
MAXMIDI/maxmidi/scripts/: postinstall.sh  thunk.sh
MAXMIDI/maxmidi/src/common/: MidiEventQueue.cpp  Sync.cpp  smf.cpp
MAXMIDI/maxmidi/src/macos/: CallbackRouter.mm  CoreMIDIWrapper.hpp  CoreMIDIWrapper.mm  MIDINotifier.mm  MIDITimeUtil.mm  SysExRouter.mm  VirtualMIDIDevice.mm
MAXMIDI/maxmidi/tests/: test_midi_io.cpp  test_midievents.cpp
